fix some mistakes

--- a/Task5/Task5.vcxproj.filters
+++ b/Task5/Task5.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Classes.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Exceptions.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Exceptions.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
